Commit refactoring of namespaces

--- a/DropzoneJs/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/DropzoneJs/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model DropzoneJs.Models.ExternalLoginConfirmationViewModel
+﻿@model GraphicsDetective.Models.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
