--- a/DropzoneJs/Views/Home/ShowUploads.cshtml
+++ b/DropzoneJs/Views/Home/ShowUploads.cshtml
@@ -1,4 +1,4 @@
-﻿@model DropzoneJs.Models.ImagesResultModel
+﻿@model GraphicsDetective.Models.ImagesResultModel
 @{
     ViewBag.Title = "ShowUploads";
 }
