--- a/DropzoneJs/Views/Account/Manage.cshtml
+++ b/DropzoneJs/Views/Account/Manage.cshtml
@@ -1,4 +1,4 @@
-﻿@using DropzoneJs.Models;
+﻿@using GraphicsDetective.Models;
 @using Microsoft.AspNet.Identity;
 @{
     ViewBag.Title = "Manage Account";
