--- a/DropzoneJs/Views/Account/Register.cshtml
+++ b/DropzoneJs/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model DropzoneJs.Models.RegisterViewModel
+﻿@model GraphicsDetective.Models.RegisterViewModel
 @{
     ViewBag.Title = "Register";
 }
